samples/_failures_safe/1761285412_034a1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c8f797d.c: In function ‘main’:
./samples/SAFE/__tmp_4c8f797d.c:145:5: error: expected declaration or statement at end of input
  145 |     if (scanf("%d", &choice) != 1) {
      |     ^~
./samples/SAFE/__tmp_4c8f797d.c:145:5: error: expected declaration or statement at end of input
